@@ -95,6 +95,7 @@ all:
 	$(MAKE) -C inetq
 	$(MAKE) -C logtime
 	$(MAKE) -C lua
+	$(MAKE) -C pingnet
 	$(MAKE) -C portdio
 	$(MAKE) -C pppc
 	$(MAKE) -C rs232d
@@ -117,6 +118,7 @@ install:
 	$(MAKE) -C inetq install
 	$(MAKE) -C logtime install
 	$(MAKE) -C lua install
+	$(MAKE) -C pingnet install
 	$(MAKE) -C portdio install
 	$(MAKE) -C pppc install
 	$(MAKE) -C rs232d install
@@ -139,6 +141,7 @@ clean:
 	$(MAKE) -C inetq clean
 	$(MAKE) -C logtime clean
 	$(MAKE) -C lua clean
+	$(MAKE) -C pingnet clean
 	$(MAKE) -C portdio clean
 	$(MAKE) -C pppc clean
 	$(MAKE) -C rs232d clean
@@ -158,6 +161,7 @@ at90can:
 	$(MAKE) -C httpd_simple
 	$(MAKE) -C inetq
 	$(MAKE) -C logtime
+	$(MAKE) -C pingnet
 	$(MAKE) -C portdio
 	$(MAKE) -C pppc
 	$(MAKE) -C rs232d
